--- a/index.html
+++ b/index.html
@@ -1,12 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technaxis</title>
+    <link rel="stylesheet" href="/scss/style.scss">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Poppins&family=Roboto&family=DM+Serif+Display&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="header">
+        <div class="menu-wrapper">
+            <div class="container">
+                <div class="menu">
+                    <div class="menu-logo">
+                        <img src="img/icon/header/Group1.png" alt="" class="menu-logo-icon">
+                        <div class="menu-logo-title">Dreammaker</div>
+                    </div>
+                    <div class="menu-list">
+                        <div class="menu-item">Home</div>
+                        <div class="menu-item">About us</div>
+                        <div class="menu-item">Service</div>
+                        <div class="menu-item">Setting</div>
+                    </div>
+                    <button class="menu-btn">Contact us</button>
+                </div>
+
+            </div>
+
+        </div>
+
+
+
+        <div class="container">
+            <div class="header-content">
+                <h1 class="header-content-title">Your awesome Dream <br> maker consultant</h1>
+                <p class="header-content-text">The occupational traffic permit is one of the most important things in
+                    the company <br>
+                    when carrying out freight transport. In fact, it is a prerequisite for <br>
+                    doing business traffic at all. </p>
+                <button class="menu-btn">Get started</button>
+            </div>
+        </div>
+    </div>
+    <div class="service">
+        <div class="container">
+            <h4 class="service-title">We provide great Service</h4>
+            <p class="service-text">The occupational traffic permit is one of the most important things in the company
+                <br>
+                when carrying out freight transport. In fact, it is a<br>
+                prerequisite for doing business traffic at all. </p>
+            <div class="service-content">
+                <div class="service-block">
+                    <img src="img/icon/service/Vector.png" alt="" class="service-icon">
+                    <div class="service-block-title">Web design</div>
+                    <div class="service-block-item">Here you can find all
+                        web design and all of yours
+                        designing meterials </div>
+                </div>
+                <div class="service-block">
+                    <img src="img/icon/service/people.png" alt="" class="service-icon">
+                    <div class="service-block-title">Health and study</div>
+                    <div class="service-block-item">Here you can find all
+                        your primary health your
+                        good health and education</div>
+                </div>
+                <div class="service-block">
+                    <img src="img/icon/service/sundur.png" alt="" class="service-icon">
+                    <div class="service-block-title">Packaging</div>
+                    <div class="service-block-item">Consistency in packaging
+                        matter a lot. Give your attention
+                        match design elements</div>
+                </div>
+                <div class="service-block">
+                    <img src="img/icon/service/pencil.png" alt="" class="service-icon">
+                    <div class="service-block-title">Content writing</div>
+                    <div class="service-block-item"> It can be understood
+                        that your fonts, sizes, headings,
+                        sub-headings, and button</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="video-blog">
+        <div class="container">
+            <h2 class="video-blog-title">First see how to expand <br> or our demo </h2>
+        </div>
+        <iframe width="100%" height="780px" src="https://www.youtube.com/embed/xGNqxcgikGk" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </div>
+    <div class="footer">
+        <div class="container">
+            <div class="footer-info">
+                <div class="footer-block">
+                    <div class="footer-block-title">Learn More</div>
+                    <div class="footer-block-item">Sell Fast</div>
+                    <div class="footer-block-item">Buy Now</div>
+                    <div class="footer-block-item">Membership</div>
+                    <div class="footer-block-item">Banner Ads</div>
+                    <div class="footer-block-item">Promotions</div>
+                </div>
+                <div class="footer-block">
+                    <div class="footer-block-title">Help & Support</div>
+                    <div class="footer-block-item">FAQ</div>
+                    <div class="footer-block-item">Stay Safe</div>
+                    <div class="footer-block-item">Contact us</div>
+                </div>
+                <div class="footer-block">
+                    <div class="footer-block-title">Social</div>
+                    <div class="footer-block-item">Blog</div>
+                    <div class="footer-block-item">Facebook</div>
+                    <div class="footer-block-item">Twitter</div>
+                    <div class="footer-block-item">Youtube</div>
+                </div>
+                <div class="footer-block">
+                    <div class="footer-block-title">About us</div>
+                    <div class="footer-block-item">About us</div>
+                    <div class="footer-block-item">Career</div>
+                    <div class="footer-block-item">Terms and Conditions</div>
+                    <div class="footer-block-item">Privacy Policy</div>
+                    <div class="footer-block-item">Sitemap</div>
+                </div>
+            </div>
+            <div class="footer-bottom-line">
+                <div class="footer-copyright">Copyright @ 2019</div>
+                <div class="footer-logo">
+                    <img src="./img/icon/footer/DW.png" class="footer-logo-item"></img>
+                    <div class="footer-logo-name">Dreammaker</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="main.js"></script>
 </body>
+
 </html>
