verstka + adaptive + burger

--- a/index.html
+++ b/index.html
@@ -8,27 +8,32 @@
     <title>Technaxis</title>
     <link rel="stylesheet" href="/scss/style.scss">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link
-        href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Poppins&family=Roboto&family=DM+Serif+Display&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Poppins&family=Roboto&family=DM+Serif+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="header">
         <div class="menu-wrapper">
             <div class="container">
-                <div class="menu">
-                    <div class="menu-logo">
-                        <img src="img/icon/header/Group1.png" alt="" class="menu-logo-icon">
-                        <div class="menu-logo-title">Dreammaker</div>
+                <div class="topbar">
+                    <div class="topbar-logo">
+                        <img src="img/icon/header/Group1.png" alt="" class="topbar-logo-icon">
+                        <div class="topbar-logo-title">Dreammaker</div>
                     </div>
-                    <div class="menu-list">
-                        <div class="menu-item">Home</div>
-                        <div class="menu-item">About us</div>
-                        <div class="menu-item">Service</div>
-                        <div class="menu-item">Setting</div>
+                    <div class="menu">
+                        <div class="menu-list">
+                            <div class="menu-item">Home</div>
+                            <div class="menu-item">About us</div>
+                            <div class="menu-item">Service</div>
+                            <div class="menu-item">Setting</div>
+                        </div>
+                        <button class="btn">Contact us</button>
                     </div>
-                    <button class="menu-btn">Contact us</button>
+                    <div class="header-menu-burger">
+                        <div class="header-menu-burger-line"></div>
+                        <div class="header-menu-burger-line"></div>
+                        <div class="header-menu-burger-line"></div>
+                    </div>
                 </div>
 
             </div>
@@ -44,7 +49,7 @@
                     the company <br>
                     when carrying out freight transport. In fact, it is a prerequisite for <br>
                     doing business traffic at all. </p>
-                <button class="menu-btn">Get started</button>
+                <button class="btn">Get started</button>
             </div>
         </div>
     </div>
