--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     </div>
                     <div class="menu">
                         <div class="menu-list">
-                            <div class="menu-item">Home</div>
-                            <div class="menu-item">About us</div>
-                            <div class="menu-item">Service</div>
-                            <div class="menu-item">Setting</div>
+                            <a href="#" class="menu-item">Home</a>
+                            <a href="#" class="menu-item">About us</a>
+                            <a href="#" class="menu-item">Service</a>
+                            <a href="#" class="menu-item">Setting</a>
                         </div>
                         <button class="btn">Contact us</button>
                     </div>
@@ -44,10 +44,10 @@
 
         <div class="container">
             <div class="header-content">
-                <h1 class="header-content-title">Your awesome Dream <br> maker consultant</h1>
+                <h1 class="header-content-title">Your awesome Dream maker consultant</h1>
                 <p class="header-content-text">The occupational traffic permit is one of the most important things in
-                    the company <br>
-                    when carrying out freight transport. In fact, it is a prerequisite for <br>
+                    the company 
+                    when carrying out freight transport. In fact, it is a prerequisite for 
                     doing business traffic at all. </p>
                 <button class="btn">Get started</button>
             </div>
@@ -56,10 +56,7 @@
     <div class="service">
         <div class="container">
             <h4 class="service-title">We provide great Service</h4>
-            <p class="service-text">The occupational traffic permit is one of the most important things in the company
-                <br>
-                when carrying out freight transport. In fact, it is a<br>
-                prerequisite for doing business traffic at all. </p>
+            <p class="service-text">The occupational traffic permit is one of the most important things in the company when carrying out freight transport. In fact, it is a prerequisite for doing business traffic at all. </p>
             <div class="service-content">
                 <div class="service-block">
                     <img src="img/icon/service/Vector.png" alt="" class="service-icon">
@@ -94,9 +91,9 @@
     </div>
     <div class="video-blog">
         <div class="container">
-            <h2 class="video-blog-title">First see how to expand <br> or our demo </h2>
+            <h2 class="video-blog-title">First see how to expand or our demo </h2>
         </div>
-        <iframe width="100%" height="780px" src="https://www.youtube.com/embed/xGNqxcgikGk" title="YouTube video player"
+        <iframe class="video"  src="https://www.youtube.com/embed/xGNqxcgikGk" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
@@ -106,32 +103,40 @@
             <div class="footer-info">
                 <div class="footer-block">
                     <div class="footer-block-title">Learn More</div>
-                    <div class="footer-block-item">Sell Fast</div>
-                    <div class="footer-block-item">Buy Now</div>
-                    <div class="footer-block-item">Membership</div>
-                    <div class="footer-block-item">Banner Ads</div>
-                    <div class="footer-block-item">Promotions</div>
+                    <ul class="footer-list">
+                        <li class="footer-block-item"><a href="#">Sell Fast</a></li>
+                        <li class="footer-block-item"><a href="#">Buy Now</a></li>
+                        <li class="footer-block-item"><a href="#">Membership</a></li>
+                        <li class="footer-block-item"><a href="#">Banner Ads</a></li>
+                        <li class="footer-block-item"><a href="#">Promotions</a></li>
+                    </ul>
                 </div>
                 <div class="footer-block">
                     <div class="footer-block-title">Help & Support</div>
-                    <div class="footer-block-item">FAQ</div>
-                    <div class="footer-block-item">Stay Safe</div>
-                    <div class="footer-block-item">Contact us</div>
+                    <ul class="footer-list">
+                        <li class="footer-block-item"><a href="#">FAQ</a></li>
+                        <li class="footer-block-item"><a href="#">Stay Safe</a></li>
+                        <li class="footer-block-item"><a href="#">Contact us</a></li>
+                    </ul>
                 </div>
                 <div class="footer-block">
                     <div class="footer-block-title">Social</div>
-                    <div class="footer-block-item">Blog</div>
-                    <div class="footer-block-item">Facebook</div>
-                    <div class="footer-block-item">Twitter</div>
-                    <div class="footer-block-item">Youtube</div>
+                    <ul class="footer-list">
+                        <li class="footer-block-item"><a href="#">Blog</a></li>
+                        <li class="footer-block-item"><a href="#">Facebook</a></li>
+                        <li class="footer-block-item"><a href="#">Twitter</a></li>
+                        <li class="footer-block-item"><a href="#">Youtube</a></li>
+                    </ul>
                 </div>
                 <div class="footer-block">
                     <div class="footer-block-title">About us</div>
-                    <div class="footer-block-item">About us</div>
-                    <div class="footer-block-item">Career</div>
-                    <div class="footer-block-item">Terms and Conditions</div>
-                    <div class="footer-block-item">Privacy Policy</div>
-                    <div class="footer-block-item">Sitemap</div>
+                    <ul class="footer-list">
+                        <li class="footer-block-item"><a href="#">About us</a></li>
+                        <li class="footer-block-item"><a href="#">Career</a></li>
+                        <li class="footer-block-item"><a href="#">Terms and Conditions</a></li>
+                        <li class="footer-block-item"><a href="#">Privacy Policy</a></li>
+                        <li class="footer-block-item"><a href="#">Sitemap</a></li>
+                    </ul>
                 </div>
             </div>
             <div class="footer-bottom-line">
